modules/vpc/main.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr_block
  tags = merge(var.tags, {Name = "vpc-${var.env}"})


}
resource "aws_subnet" "public" {
  vpc_id            = aws_vpc.main.id
  count = length(var.public_subnets)
  cidr_block        = var.public_subnets[count.index]
  tags = merge(var.tags, {Name = "vpc-public-subnets"})
  availability_zone = var.azs[count.index]

}
resource "aws_subnet" "web" {
  vpc_id            = aws_vpc.main.id
  count = length(var.web_subnets)
  cidr_block        = var.web_subnets[count.index]
  tags = merge(var.tags, {Name = "vpc-web-subnets"})
  availability_zone = var.azs[count.index]
}
resource "aws_subnet" "app" {
  vpc_id            = aws_vpc.main.id
  count = length(var.app_subnets)
  cidr_block        = var.app_subnets[count.index]
  tags = merge(var.tags, {Name = "vpc-app-subnets"})
  availability_zone = var.azs[count.index]

}
resource "aws_subnet" "db" {
  vpc_id            = aws_vpc.main.id
  count = length(var.db_subnets)
  cidr_block        = var.db_subnets[count.index]
  tags = merge(var.tags, {Name = "vpc-db-subnets"})
  availability_zone = var.azs[count.index]

}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  tags = merge(var.tags, {Name = "public-rtb"})

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  route {
    cidr_block = var.default_cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.peer.id
  }

}
resource "aws_route_table" "web" {
  vpc_id = aws_vpc.main.id
  tags = merge(var.tags, {Name = "web-rtb"})
  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.ngw.id
  }
  route {
    cidr_block = var.default_cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.peer.id
  }
}
resource "aws_route_table" "app" {
  vpc_id = aws_vpc.main.id
  tags = merge(var.tags, {Name = "app-rtb"})
  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.ngw.id
  }
  route {
    cidr_block = var.default_cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.peer.id
  }
}
resource "aws_route_table" "db" {
  vpc_id = aws_vpc.main.id
  tags = merge(var.tags, {Name = "db-rtb"})
  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.ngw.id
  }
  route {
    cidr_block = var.default_cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.peer.id
  }
}

resource "aws_route_table_association" "public" {
  count = length(aws_subnet.public)
  subnet_id      = aws_subnet.public.*.id[count.index]
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "web" {
  count = length(aws_subnet.web)
  subnet_id      = aws_subnet.web.*.id[count.index]
  route_table_id = aws_route_table.web.id
}

resource "aws_route_table_association" "app" {
  count = length(aws_subnet.app)
  subnet_id      = aws_subnet.app.*.id[count.index]
  route_table_id = aws_route_table.app.id
}

resource "aws_route_table_association" "db" {
  count = length(aws_subnet.db)
  subnet_id      = aws_subnet.db.*.id[count.index]
  route_table_id = aws_route_table.db.id
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags = merge(var.tags, {Name = "Igw"})
}
resource "aws_eip" "ngw" {
domain = "vpc"
}
resource "aws_nat_gateway" "ngw" {
  allocation_id = aws_eip.ngw.id
  subnet_id     = aws_subnet.public.*.id[0]
}

resource "aws_vpc_peering_connection" "peer" {
  peer_owner_id = var.account_id
  peer_vpc_id   = var.default_vpc_id
  vpc_id        = aws_vpc.main.id
  auto_accept = true
  tags = merge(var.tags, {Name = "peer-for-${var.env}-vpc-to-default-vpc"})
}

resource "aws_route" "defaultvpcpeerroute" {
  route_table_id            = var.default_route_table
  destination_cidr_block    = var.vpc_cidr_block
  vpc_peering_connection_id = aws_vpc_peering_connection.peer.id
}
